--- a/PT1630A_UD_COM108/Bai_1.4_ToanTuSoSanh/Bai_1.4_ToanTuSoSanh.vcxproj.filters
+++ b/PT1630A_UD_COM108/Bai_1.4_ToanTuSoSanh/Bai_1.4_ToanTuSoSanh.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Bai_1.3_ToanTuSoHoc\Main.c">
+    <ClCompile Include="Main2.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
